--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -12,7 +12,7 @@
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "^14.2.15",
+    "next": "15.0.1-canary.3",
     "next-auth": "^5.0.0-beta.25",
     "postcss": "8.4.38",
     "react": "^18.3.1",
